<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.7.3</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.example</groupId>
	<artifactId>demo</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>demo</name>
	<description>Demo project for Spring Boot</description>
	<properties>
		<java.version>1.8</java.version>
	</properties>

	<!-- modbus4j必须加上这2个配置 -->
	<repositories>
		<repository>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
			<id>ias-snapshots</id>
			<name>Infinite Automation Snapshot Repository</name>
			<url>https://maven.mangoautomation.net/repository/ias-snapshot/</url>
		</repository>
		<repository>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<id>ias-releases</id>
			<name>Infinite Automation Release Repository</name>
			<url>https://maven.mangoautomation.net/repository/ias-release/</url>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>cn.hutool</groupId>
			<artifactId>hutool-all</artifactId>
			<version>5.7.22</version>
			<scope>compile</scope>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
		</dependency>

		<dependency>
			<groupId>com.alibaba</groupId>
			<artifactId>fastjson</artifactId>
			<version>1.2.78</version>
		</dependency>

		<!-- MQTT -->
		<dependency>
			<groupId>org.eclipse.paho</groupId>
			<artifactId>org.eclipse.paho.client.mqttv3</artifactId>
			<!--<artifactId>org.eclipse.paho.mqttv5.client</artifactId>-->
			<version>1.2.5</version>
		</dependency>


		<!-- Jlibmodbus -->
		<dependency>
			<groupId>com.intelligt.modbus</groupId>
			<artifactId>jlibmodbus</artifactId>
			<version>1.2.9.7</version>
		</dependency>

		<!-- 串口通信  begin-->
		<!-- https://mvnrepository.com/artifact/org.rxtx/rxtx -->
		<dependency>
			<groupId>org.rxtx</groupId>
			<artifactId>rxtx</artifactId>
			<version>2.1.7</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.scream3r/jssc -->
		<dependency>
			<groupId>org.scream3r</groupId>
			<artifactId>jssc</artifactId>
			<version>2.8.0</version>
		</dependency>
		<!-- 串口通信  end-->


		<!-- modbus4j -->
		<dependency>
			<groupId>com.infiniteautomation</groupId>
			<artifactId>modbus4j</artifactId>
			<version>3.0.3</version>
		</dependency>


		<!-- modbus-master-tcp -->
		<dependency>
			<groupId>com.digitalpetri.modbus</groupId>
			<artifactId>modbus-master-tcp</artifactId>
			<version>1.1.0</version>
		</dependency>
		<dependency>
			<groupId>com.digitalpetri.modbus</groupId>
			<artifactId>modbus-slave-tcp</artifactId>
			<version>1.1.0</version>
		</dependency>


		<!-- HslCommunication -->
		<dependency>
			<groupId>com.github.dathlin</groupId>
			<artifactId>HslCommunication</artifactId>
			<version>3.3.1</version>
		</dependency>


		<!-- Netty -->
		<dependency>
			<groupId>io.netty</groupId>
			<artifactId>netty-all</artifactId>
		</dependency>

	</dependencies>

	<!-- 打包 -->
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>repackage</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<mainClass>com.dfds.demolyy.TaskApplication</mainClass>
				</configuration>
			</plugin>

		</plugins>
	</build>

</project>
